--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
-    "playwright": "^1.52.0"
+    "image-ssim": "^0.2.0",
+    "pixelmatch": "^7.1.0",
+    "playwright": "^1.52.0",
+    "pngjs": "^7.0.0",
+    "resemblejs": "^5.0.0",
+    "sharp": "^0.34.2",
+    "ssim.js": "^3.5.0"
   },
   "name": "projecttensorts",
   "version": "1.0.0",
@@ -8,6 +14,7 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.21",
+    "@types/pixelmatch": "^5.2.6",
     "prettier": "^3.5.3"
   },
   "scripts": {
